# Tierpsy_Fluent

./: .gitmodules  CMakeLists.txt  LICENSE  Main.qml  README.md  circularreveal.h  imgparam.cpp  imgparam.h  main.cpp  tierpsy.cpp  tierpsy.h  tierpsy.qrc  xmake.lua
.xmake/windows/x64/: xmake.conf
.xmake/windows/x64/cache/: config  detect  history  package  references  toolchain
Components/: FluCustomWindow.qml  MainWindow.qml  stdafx.h
action-cli/: InstallerScript.iss
global/: ItemSetting.qml  ItemsFooter.qml  ItemsOriginal.qml  qmldir
pages/: About.qml  Home.qml  Parameter.qml  Settings.qml  test.qml
